# Rust

rust-actix/: .env  Cargo.toml
rust-actix/core/: Cargo.toml
rust-actix/database/: Cargo.toml
rust-actix/database/migrations/2023-01-13-135804_create_accounts/: up.sql
rust-actix/database/src/: schema.rs
rust-actix/database/src/models/: account.rs
rust-actix/postgresql/: Cargo.toml
rust-actix/server/: Cargo.toml
rust-actix/server/src/: main.rs
rust-actix/server/src/controllers/: mod.rs
rust-actrix/: docker-compose.yml
rust-actrix/core-service/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile_backup_workshop  README.md
rust-actrix/core-service/database/: Cargo.toml
rust-actrix/core-service/database/src/: lib.rs
rust-actrix/core-service/migrations/2023-01-19-133001_create_accounts/: up.sql
rust-actrix/core-service/server/: Cargo.toml
rust-actrix/core-service/server/src/: main.rs
rust-actrix/core-service/server/src/controllers/: authenticate_controller.rs
rust-actrix/core-service/server/src/services/: account_service.rs
rust-actrix/core-service/src/: lib.rs  main.rs
rust-actrix/core-service/src/controllers/: authenticate_controller.rs
rust-actrix/core-service/src/data_access/: accounts.rs
rust-actrix/core-service/src/services/: account_service.rs
