[package]
name = "rust-core-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

## Posgresql
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"

## Helpers
# For hashing password
base64 = "0.13.0"
# Logger
log = { version = "0.4", features = ["std", "serde"] }
