[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database= { path = "../database" }
actix-web = "4"

# For hashing password
base64 = "0.13.0"
# Logger
log = { version = "0.4", features = ["std", "serde"] }
